--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
  .main-section {
    margin: auto;
    width: 80%;
-   border: dashed 1px red;
  }
  .wrapper {
 
@@ -18,35 +17,31 @@ body {
 
  width: 80%;
 
- border: dashed 1px red;
-
-}
-
-.logo, .menu {
-
- display: inline-block;
-
- border: dashed 1px red;
-
-}
-.logo {
-
  margin-right: 63%;
 
 }
 .header {
+  padding: 40px 0;
+  display: flex;
+  justify-content: space-between;
+}
 
- display: flex;
- justify-content: space-between;
+
+.logo {
+// font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
+ width: 190px;
+ height: 35px;
+ background: url('img/logo.svg');
+}
+
+.header {
 
 }
 .menu {
 
- 
-
- .description, .title {
-font-family: "Roboto";
-font-weight: 400;
-color: white;
-text-align: center;
-}
+  .description, .title {
+ font-family: "Roboto";
+ font-weight: 400;
+ color: white;
+ text-align: center;
+ }
