--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body {
 
  width: 80%;
 
- margin-right: 63%;
 
 }
 .header {
@@ -26,18 +25,78 @@ body {
   justify-content: space-between;
 }
 
+.menu__item {
+  position: relative;
+  margin-right: 26px;
+  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+  color: #000;
+  text-decoration: none;
+  transition: opacity .5s;
+}
+
+.menu__item:last-child {
+  margin-right: 0;
+}
+
+.menu__item_active::after {
+  position: absolute;
+  display: block;
+  content: '';
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+}
+
+.menu__item:after {
+  position: absolute;
+  left: 0;
+  display: block;
+  content: '';
+  width: 0%;
+  height: 3px;
+  background: #0056EC;
+  opacity: 0;
+  transition: opacity .5s, width .5s;
+}
+
+.menu__item:hover {
+  opacity: 0,5;
+}
+
+.menu__item:hover:after, .menu__item_active:after {
+  opacity: 1;
+  width: 100%
+}
 
 .logo {
-// font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
- width: 190px;
- height: 35px;
- background: url('img/logo.svg');
+  position: relative;
+  padding: 40px 0;
+  padding-left: 44px;
+  font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
 }
 
-.header {
-
+.logo__circle {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  opacity:.7;
 }
-.menu {
+
+.logo__circle_color_dark-blue {
+ background: #0056EC;
+}
+
+
+.logo__circle_color_blue {
+  left: 8px;
+  top: 56%;
+  background: #C8DBFB;
+}
 
   .description, .title {
  font-family: "Roboto";
