--- a/style.css
+++ b/style.css
@@ -1,90 +1,69 @@
 body {
   margin: 0;
+  box-sizing: border-box;
 }
-
-.header {
+.wrapper {
   margin: auto;
   width: 80%;
 }
-
- .main-section {
-   margin: auto;
-   width: 80%;
- }
- .wrapper {
-
- margin: auto;
-
- width: 80%;
-
-
-}
 .header {
-  align-items: center;
-  padding: 40px 0;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 100px;
 }
-
-
-.main-content__subtitle {
-  margin-bottom: 41px
-  font: 18px/21px Roboto, arial, helvetica, sans-serif;
+.logo,
+.menu {
+  display: inline-block;
 }
-
-
+.menu {
+  display: flex;
+  align-items: center;
+}
 .menu__item {
   position: relative;
   margin-right: 26px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
   color: #000;
   text-decoration: none;
-  transition: opacity .5s;
+  transition: opacity 0.5s;
 }
-
-
-.menu__item:last-child {
-  margin-right: 0;
+.menu__item::after {
+  position: absolute;
+  left: 0;
+  display: block;
+  content: '';
+  width: 0;
+  height: 3px;
+  background: #0056ec;
+  opacity: 0;
+  transition: opacity 0.5s, width 0.5s;
 }
-
+.menu__item:hover::after,
 .menu__item_active::after {
+  opacity: 1;
+  width: 100%;
+}
+.menu__item_active:hover::after {
   position: absolute;
   display: block;
   content: '';
   left: 0;
   width: 100%;
   height: 3px;
-  background: #0056EC;
+  background: #0056ec;
 }
-
-.menu__item:after {
-  position: absolute;
-  left: 0;
-  display: block;
-  content: '';
-  width: 0%;
-  height: 3px;
-  background: #0056EC;
-  opacity: 0;
-  transition: opacity .5s, width .5s;
-}
-
 .menu__item:hover {
-  opacity: 0,5;
+  opacity: 0.5;
 }
-
-.menu__item:hover:after, .menu__item_active:after {
-  opacity: 1;
-  width: 100%
+.menu__item:last-child {
+  margin-right: 0;
 }
-
 .logo {
   position: relative;
   padding: 40px 0;
   padding-left: 44px;
-  font: bold 24px/31px pt_serif, arial, helvetica, sans-serif;
+  font: 24px/32px pt_serifbold, arial, helvetica, sans-serif;
 }
-
 .logo__circle {
   position: absolute;
   left: 0;
@@ -93,23 +72,51 @@ body {
   width: 28px;
   height: 28px;
   border-radius: 50%;
-  opacity:.7;
 }
-
-.logo__circle_color_dark-blue {
- background: #0056EC;
-}
-
-
 .logo__circle_color_blue {
+  opacity: 0.7;
   left: 8px;
   top: 56%;
-  background: #C8DBFB;
+  background: #c8dbfb;
+}
+.logo__circle_color_dark-blue {
+  background: #0056ec;
+}
+.main {
+  padding: 0 63% 100px 0;
+  background: top right no-repeat url(img/mainImg.svg);
+}
+.main__title {
+  margin: 0 0 40px 0;
+  font: 50px/65px pt_serifbold, arial, helvetica, sans-serif;
+  }
 }
 
-  .description, .title {
- font-family: "Roboto";
- font-weight: 400;
- color: white;
- text-align: center;
- }
+.main__title-text_highlight {
+  background: #ecf3ff;
+  }
+}
+
+.main__subtitle {
+  margin: 0 0 41px 0;
+  font: 18px/21px Roboto, arial, helvetica, sans-serif;
+  }
+}
+
+.main__button {
+  display: inline-block;
+  font: 14px/17px Roboto, arial, helvetica, sans-serif;
+  color: #fff;
+  background: #0056ec;
+  padding: 16px 16px;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: opacity 0.5s;
+  }
+}
+
+.main__button:hover {
+  opacity: 0.5;
+  background: #00ad9f;
+  color: #000;
+}
