--- a/style.css
+++ b/style.css
@@ -83,24 +83,19 @@ body {
   background: #0056ec;
 }
 .main {
-  padding: 0 63% 100px 0;
-  background: top right no-repeat url(img/mainImg.svg);
-}
-.main__title {
-  margin: 0 0 40px 0;
-  font: 50px/65px pt_serifbold, arial, helvetica, sans-serif;
-  }
+  padding-top: 100px;
+  padding-right: 63%;
+  background: url(Frame.svg);
 }
 
-.main__title-text_highlight {
-  background: #ecf3ff;
-  }
+.main__title {
+  margin: 0 0 40px 0;
+  font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
 }
 
 .main__subtitle {
   margin: 0 0 41px 0;
   font: 18px/21px Roboto, arial, helvetica, sans-serif;
-  }
 }
 
 .main__button {
