--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   justify-content: space-between;
   margin-bottom: 100px;
 }
-.logo,
+
 .menu {
   display: inline-block;
 }
@@ -83,9 +83,15 @@ body {
   background: #0056ec;
 }
 .main {
-  padding-top: 100px;
   padding-right: 63%;
-  background: url(Frame.svg);
+  background: url("Frame/Frame\ (1).svg");
+  background-repeat: no-repeat;
+  background-position: top right;
+}
+
+.main {
+  padding-right: 63%;
+  background: top right no repeat url("Frame/Frame\ (1).svg");
 }
 
 .main__title {
