--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body {
   background: url("Frame/Frame\ (1).svg");
   background-repeat: no-repeat;
   background-position: top right;
+  background-size: 100% 100%;
 }
 
 .main {
