--- a/style.css
+++ b/style.css
@@ -86,8 +86,8 @@ body {
   padding-right: 63%;
   background: url("Frame/Frame\ (1).svg");
   background-repeat: no-repeat;
-  background-position: top right;
-  background-size: 100% 100%;
+  background-position: center right;
+  background-size: 60% 90%;
 }
 
 .main {
@@ -100,6 +100,10 @@ body {
   font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
 }
 
+.main__title-text_highlight {
+  background: #ECF3FF;
+}
+
 .main__subtitle {
   margin: 0 0 41px 0;
   font: 18px/21px Roboto, arial, helvetica, sans-serif;
@@ -107,15 +111,14 @@ body {
 
 .main__button {
   display: inline-block;
-  font: 14px/17px Roboto, arial, helvetica, sans-serif;
+  font: 14px/16px Roboto, arial, helvetica, sans-serif;
   color: #fff;
   background: #0056ec;
-  padding: 16px 16px;
+  padding: 14px 16px;
   text-decoration: none;
   border-radius: 4px;
-  transition: opacity 0.5s;
+  transition: opacity .5s;
   }
-}
 
 .main__button:hover {
   opacity: 0.5;
