--- a/style.css
+++ b/style.css
@@ -62,8 +62,9 @@ body {
   position: relative;
   padding: 40px 0;
   padding-left: 44px;
-  font: 24px/32px pt_serifbold, arial, helvetica, sans-serif;
+  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
 }
+
 .logo__circle {
   position: absolute;
   left: 0;
