--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 body {
   margin: 0;
+  margin: 0 auto;
   box-sizing: border-box;
+  max-width: 1920px;
 }
+
 .wrapper {
   margin: auto;
   width: 80%;
@@ -11,7 +14,6 @@ body {
   justify-content: space-between;
   margin-bottom: 100px;
 }
-
 .menu {
   display: inline-block;
 }
@@ -62,6 +64,7 @@ body {
   position: relative;
   padding: 40px 0;
   padding-left: 44px;
+  font: 24px/32px pt_serifbold, arial, helvetica, sans-serif;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
 }
 
@@ -90,26 +93,21 @@ body {
   background-position: center right;
   background-size: 60% 90%;
 }
-
 .main {
   padding-right: 63%;
   background: top right no repeat url("Frame/Frame\ (1).svg");
 }
-
 .main__title {
   margin: 0 0 40px 0;
   font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
 }
-
 .main__title-text_highlight {
   background: #ECF3FF;
 }
-
 .main__subtitle {
   margin: 0 0 41px 0;
   font: 18px/21px Roboto, arial, helvetica, sans-serif;
 }
-
 .main__button {
   display: inline-block;
   font: 14px/16px Roboto, arial, helvetica, sans-serif;
@@ -120,20 +118,23 @@ body {
   border-radius: 4px;
   transition: opacity .5s;
   }
-
 .main__button:hover {
   opacity: 0.5;
   background: #00ad9f;
   color: #000;
 }
+
+
 @media (max-width: 768px) {
  .menu {
    display: none;
  }
 
  .header {
-  margin-bottom: 28px;
+   margin-bottom: 28px;
  }
+
+
 
  .main {
    text-align: center;
@@ -142,101 +143,23 @@ body {
    background-position: top center;
  }
 
+
+
  .main__title {
    margin-bottom: 44px;
    font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
  }
 
-  .main__subtitle {
-    margin-bottom: 25px;
-    font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
-  }
 
-  .main__button {
-    font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
-  }
+
+ .main__subtitle {
+   margin-bottom: 25px;
+   font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
  }
 
 
- /* скрываем чекбокс */
- #menu__toggle {
-   opacity: 0;
- }
- /* стилизуем кнопку */
- .menu__btn {
-   display: flex; /* используем flex для центрирования содержимого */
-   align-items: center;  /* центрируем содержимое кнопки */
-   position: fixed;
-   top: 20px;
-   left: 20px;
-   width: 26px;
-   height: 26px;
-   cursor: pointer;
-   z-index: 1;
- }
- /* добавляем "гамбургер" */
- .menu__btn > span,
- .menu__btn > span::before,
- .menu__btn > span::after {
-   display: block;
-   position: absolute;
-   width: 100%;
-   height: 2px;
-   background-color: #616161;
- }
- .menu__btn > span::before {
-   content: '';
-   top: -8px;
- }
- .menu__btn > span::after {
-   content: '';
-   top: 8px;
- }
 
-
- /* контейнер меню */
- .menu__box {
-   display: block;
-   position: fixed;
-   visibility: hidden;
-   top: 0;
-   left: -100%;
-   width: 300px;
-   height: 100%;
-   margin: 0;
-   padding: 80px 0;
-   list-style: none;
-   text-align: center;
-   background-color: #ECEFF1;
-   box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+ .main__button {
+   font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
  }
- /* элементы меню */
- .menu__item {
-   display: block;
-   padding: 12px 24px;
-   color: #333;
-   font-family: 'Roboto', sans-serif;
-   font-size: 20px;
-   font-weight: 600;
-   text-decoration: none;
- }
- .menu__item:hover {
-   background-color: #CFD8DC;
- }
-
-
- #menu__toggle:checked ~ .menu__btn > span {
-   transform: rotate(45deg);
- }
- #menu__toggle:checked ~ .menu__btn > span::before {
-   top: 0;
-   transform: rotate(0);
- }
- #menu__toggle:checked ~ .menu__btn > span::after {
-   top: 0;
-   transform: rotate(90deg);
- }
- #menu__toggle:checked ~ .menu__box {
-   visibility: visible;
-   left: 0;
- }
+}
