--- a/style.css
+++ b/style.css
@@ -75,7 +75,9 @@ body {
   width: 28px;
   height: 28px;
   border-radius: 50%;
+  opacity: .7;
 }
+
 .logo__circle_color_blue {
   opacity: 0.7;
   left: 8px;
