--- a/style.css
+++ b/style.css
@@ -338,3 +338,69 @@ body {
    font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
  }
 }
+
+
+
+header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav__burger {
+  position: relative;
+	width: 25px;
+	height: 17px;
+  cursor: pointer;
+}
+
+.burger__line{
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 3px;
+	background: #0056EC;
+	top: 7px;
+}
+
+.nav__burger::before,
+.nav__burger::after {
+	content: "";
+	width: 100%;
+	height: 3px;
+	background: #0056EC;
+	position: absolute;
+	transition: .3s ease;
+}
+
+.nav__burger::before {
+	top: 0;
+}
+
+.nav__burger::after {
+	bottom: 0;
+}
+
+#checkbox_id:checked ~ .nav {
+  display: flex;
+  height: 100px;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+#checkbox_id:checked ~ .nav > .nav__item {
+  color: red;
+}
+
+#checkbox_id:checked ~ label > .nav__burger > .burger__line {
+  display: none;
+}
+
+#checkbox_id:checked ~ label > .nav__burger::before {
+  top: 7px;
+  transform: rotate(45deg);
+}
+
+#checkbox_id:checked ~ label > .nav__burger::after {
+  top: 7px;
+  transform: rotate(-45deg);;
+}
