--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 body {
-  margin: 0 auto;
+  margin:  0 auto;
   box-sizing: border-box;
   max-width: 1920px;
 }
-
 .wrapper {
   margin: auto;
   width: 80%;
@@ -65,7 +64,6 @@ body {
   padding-left: 44px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
 }
-
 .logo__circle {
   position: absolute;
   left: 0;
@@ -76,7 +74,6 @@ body {
   border-radius: 50%;
   opacity: .7;
 }
-
 .logo__circle_color_blue {
   opacity: 0.7;
   left: 8px;
@@ -88,12 +85,8 @@ body {
 }
 .main {
   padding-right: 63%;
-  padding-top: 100px;
-  padding-bottom: 100px;
   background: url("Frame/Frame\ (1).svg");
   background-repeat: no-repeat;
-  background-position: top right;
-  background-size: 50%;
   background-position: center right;
   background-size: 60% 90%;
 }
@@ -105,7 +98,6 @@ body {
   margin: 0 0 30px 0;
   font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
 }
-
 .main__title-text_highlight {
   background: #ECF3FF;
 }
@@ -130,43 +122,29 @@ body {
   background: #00ad9f;
   color: #000;
 }
-
 .main__title-text_highlight {
   background: #ECF3FF;
 }
-
-
 @media (max-width: 768px) {
  .menu {
    display: none;
  }
-
  .header {
    margin-bottom: 28px;
  }
-
-
-
  .main {
    text-align: center;
    padding: 74% 0 0;
    background-size: 74%;
    background-position: top center;
  }
-
-
-
  .main__title {
    margin-bottom: 44px;
    font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
  }
-
-
 .hamburger-menu{
   display: none;
 }
-
-
 @media (max-width:1366px){
   .menu__item{
   font-size: 14px;
@@ -174,7 +152,6 @@ body {
   .wrapper{
   width: 70%;
 }
-
 .header{
  margin-bottom: 0;
 }
@@ -185,9 +162,7 @@ header {
 }
 
 .nav__burger {
-  position: absolute;
-  top: 40px;
-  right: 40px;
+  position: relative;
 	width: 25px;
 	height: 17px;
   cursor: pointer;
@@ -244,8 +219,6 @@ header {
   top: 7px;
   transform: rotate(-45deg);;
 }
-
-
 .main{
  padding-right: 50%;
  padding-top: 90px;
@@ -310,7 +283,8 @@ header {
       a {
          display: none;
        }
-      .hamburger-menu {
+
+       .hamburger-menu {
         width: 30px;
         height: 30px;
         display: flex;
@@ -394,14 +368,3 @@ header {
          position: relative;
         }
     }
- .main__subtitle {
-   margin-bottom: 25px;
-   font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
- }
-
-
-
- .main__button {
-   font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
- }
-}
