--- a/style.css
+++ b/style.css
@@ -10,60 +10,16 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 100px;
+  margin-bottom: 125px;
 }
-.menu {
-  display: inline-block;
-}
-.menu {
-  display: flex;
-  align-items: center;
-}
-.menu__item {
-  position: relative;
-  margin-right: 26px;
-  font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
-  color: #000;
-  text-decoration: none;
-  transition: opacity 0.5s;
-}
-.menu__item::after {
-  position: absolute;
-  left: 0;
-  display: block;
-  content: '';
-  width: 0;
-  height: 3px;
-  background: #0056ec;
-  opacity: 0;
-  transition: opacity 0.5s, width 0.5s;
-}
-.menu__item:hover::after,
-.menu__item_active::after {
-  opacity: 1;
-  width: 100%;
-}
-.menu__item_active:hover::after {
-  position: absolute;
-  display: block;
-  content: '';
-  left: 0;
-  width: 100%;
-  height: 3px;
-  background: #0056ec;
-}
-.menu__item:hover {
-  opacity: 0.5;
-}
-.menu__item:last-child {
-  margin-right: 0;
-}
+
 .logo {
   position: relative;
   padding: 40px 0;
   padding-left: 44px;
   font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
 }
+
 .logo__circle {
   position: absolute;
   left: 0;
@@ -83,288 +39,352 @@ body {
 .logo__circle_color_dark-blue {
   background: #0056ec;
 }
-.main {
-  padding-right: 63%;
-  background: url("Frame/Frame\ (1).svg");
-  background-repeat: no-repeat;
-  background-position: center right;
-  background-size: 60% 90%;
+
+.menu {
+  display: flex;
+  align-items: center;
 }
-.main {
-  padding-right: 63%;
-  background: top right no repeat url("Frame/Frame\ (1).svg");
+
+.menu__item {
+  position: relative;
+  margin-right: 28px;
+  font: 500 18px/17px Roboto, arial, helvetica, sans-serif;
+  color: #000;
+  text-decoration: none;
+  transition: opacity .5s;
 }
+
+.menu__item:last-child {
+  margin-right: 0;
+}
+
+.menu__item_active::after {
+  position: absolute;
+  display: block;
+  content: '';
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+}
+
+.menu__item:after {
+  position: absolute;
+  left: 0;
+  display: block;
+  content: '';
+  width: 0;
+  height: 3px;
+  background: #0056ec;
+  opacity: 0;
+  transition: opacity .5s, width .5s;
+}
+
+.menu__item:hover {
+  opacity: 0.5;
+}
+
+.menu__item:hover:after {
+  position: absolute;
+  left: 0;
+  display:block;
+  content: '';
+  width: 100%;
+  height: 3px;
+  background: #0056EC;
+}
+
+
+.menu__item:hover:after, .menu__item_active:after {
+  opacity: 1;
+  width: 100%;
+}
+
+.menu__item_active:hover::after {
+  position: absolute;
+  display: block;
+  content: '';
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: #0056ec;
+}
+
+.menu__item:hover {
+  opacity: 0.5;
+}
+
+.main {
+  padding: 6% 63% 267px 0;
+  background: top right no-repeat url("Frame/Frame\ (1).svg");
+  background-size: 40vw 35vw;
+}
+
 .main__title {
-  margin: 0 0 30px 0;
-  font: bold 50px/65px pt_serif, arial, helvetica, sans-serif;
+  font: bold 71px/83px pt_serif, arial, helvetica, sans-serif;
+  margin: 0 0 45px 0;
 }
+
 .main__title-text_highlight {
   background: #ECF3FF;
 }
+
 .main__subtitle {
-  margin: 0 0 40px 0;
-  font: 18px/21px Roboto, arial, helvetica, sans-serif;
-  width: 80%;
+  font: 500 22px/26px Roboto, arial, helvetica, sans-serif;
+  margin: 0 16% 41px 0;
 }
+
 .main__button {
-  font: 18px Roboto, arial, helvetica, sans-serif;
   display: inline-block;
+  font: 500 18px/28px Roboto, arial, helvetica, sans-serif;
   color: #fff;
   background: #0056ec;
-  padding: 20px 30px 20px 30px;
+  padding: 15px 28px;
   text-decoration: none;
   border-radius: 4px;
-  transition: opacity .5s;
-  text-align: center;
-  }
+}
+
 .main__button:hover {
   opacity: 0.5;
   background: #00ad9f;
   color: #000;
 }
-.main__title-text_highlight {
-  background: #ECF3FF;
-}
-@media (max-width: 768px) {
- .menu {
-   display: none;
- }
- .header {
-   margin-bottom: 28px;
- }
- .main {
-   text-align: center;
-   padding: 74% 0 0;
-   background-size: 74%;
-   background-position: top center;
- }
- .main__title {
-   margin-bottom: 44px;
-   font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
- }
-.hamburger-menu{
-  display: none;
-}
-@media (max-width:1366px){
-  .menu__item{
-  font-size: 14px;
-}
-  .wrapper{
-  width: 70%;
-}
-.header{
- margin-bottom: 0;
+
+@keyframes swing {
+  15% {
+    transform: translateX(9px);
+  }
+  30% {
+    transform: translateX(-9px);
+  }
+  40% {
+    transform: translateX(6px);
+  }
+  50% {
+    transform: translateX(-6px);
+  }
+  65% {
+    transform: translateX(3px);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 
-header {
+.lower {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
-.nav__burger {
-  position: relative;
-	width: 25px;
-	height: 17px;
-  cursor: pointer;
+.lower__circles {
+  width: 8px;
+  height: 8px;
+  margin-right: 4px;
+  background: #C8DBFB;
+  border-radius: 50%;
+  opacity: .7;
 }
 
-.burger__line{
-	position: absolute;
-	display: block;
-	width: 100%;
-	height: 3px;
-	background: #0056EC;
-	top: 7px;
+.lower__circles:last-child {
+  margin-right: 0;
 }
 
-.nav__burger::before,
-.nav__burger::after {
-	content: "";
-	width: 100%;
-	height: 3px;
-	background: #0056EC;
-	position: absolute;
-	transition: .3s ease;
-}
-
-.nav__burger::before {
-	top: 0;
-}
-
-.nav__burger::after {
-	bottom: 0;
-}
-
-#checkbox_id:checked ~ .nav {
-  display: flex;
-  height: 100px;
-  justify-content: space-around;
-  flex-direction: column;
-}
-
-#checkbox_id:checked ~ .nav > .nav__item {
-  color: red;
-}
-
-#checkbox_id:checked ~ label > .nav__burger > .burger__line {
+#checkbox {
   display: none;
 }
 
-#checkbox_id:checked ~ label > .nav__burger::before {
-  top: 7px;
-  transform: rotate(45deg);
-}
-
-#checkbox_id:checked ~ label > .nav__burger::after {
-  top: 7px;
-  transform: rotate(-45deg);;
-}
-.main{
- padding-right: 50%;
- padding-top: 90px;
- background-position: center right;
-}
-
-.main__title{
-  font-size:50px;
-  margin: 0 0 40px 0;
-}
-
-.main__subtitle{
-  font-size: 18px;
-}
-
- .main__botton{
-   font: 14px 'Roboto', arial,helvetica,sans-serif;
-   display: inline-block;
-   color: #fff;
-   background:#0056ec;
-   padding: 13px 21px 13px 21px;
-   text-decoration: none;
-   border-radius: 4px;
-   transition: opacity .5s;
+@media (max-width: 1023px) {
+  .menu {
+    display: none;
+    padding: 135px 100% 100%;
+    margin-top: 30px;
+    flex-direction: column;
+    position: absolute;
+    z-index: 1;
   }
 
- @media (max-width:1024px) {
-  .wrapper{
-    width: 93%;
- }
+  .menu__item {
+    display: block;
+    margin: 0 0 24px 0;
+    font: 500 30px/35px Roboto, arial, helvetica, sans-serif;
+  }
 
-  @media (max-width:575px)
-    {
-      .menu {
-          display: none;
-             }
-      .header {
-          margin-bottom:5px;
-          justify-content: space-between;
-          align-items: center;
-              }
-      .main {
-          text-align: center;
-          padding: 77% 0 0;
-          background-size: 85%;
-          background-position: top center;
-        }
-      .main__title{
-          margin-bottom: 30px;
-          font: bold 30px 'pt_serifbold',arial,helvetica,sans-serif;
-         }
-      .main__subtitle{
-           margin:0 20px 25px 40px;
-           font:500 16px/19px 'Roboto',arial,helvetica,sans-serif;
-           width: 75%;
-           text-align: center;
-         }
-      .main__botton{
-           font: 500 14px/16px 'Roboto',arial,helvetica,sans-serif;
-         }
-      a { display: none;}
-      a {
-         display: none;
-       }
+  .menu__item_active::after {
+    background: #fff;
+  }
 
-       .hamburger-menu {
-        width: 30px;
-        height: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        }
-      #menu__icon{
-          opacity: 0;
-        }
-      .menu__btn {
-          width: 25px;
-          height: 3px;
-          background-color: #0056ec;
-          display: block;
-          position: fixed;
-          cursor: pointer;
-          z-index: 10;
-        }
-      .menu__btn::before {
-          position: absolute;
-          left: 0;
-          top: -7px;
-          content: '';
-          width: 25px;
-          height: 3px;
-          background-color: #0056ec;
-          transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
-        }
-      .menu__btn::after {
-          position: absolute;
-          left: 0;
-          top: 7px;
-          content: '';
-          width: 25px;
-          height: 3px;
-          background-color: #0056ec;
-          transition: transform 0.2s ease-in, top 0.2s linear 0.2s;
-         }
-      #menu__icon:checked ~ .menu__btn {
-           transform: rotate(45deg);
-         }
-      #menu__icon:checked ~ .menu__btn::before {
-           top: 0;
-           transform: rotate(0);
-         }
-      #menu__icon:checked ~ .menu__btn::after {
-           top: 0;
-           transform: rotate(90deg);
-         }
-      #menu__icon:checked ~ .menu__box {
-           visibility: visible;
-           left: 0;
-          }
-      .menu__box {
-          display: block;
-          position: fixed;
-          visibility: hidden;
-          top: 0;
-          left: -100%;
-          width: 100%;
-          height: 100%;
-          margin: 0;
-          padding: 175px 0;
-          list-style: none;
-          text-align: center;
-          background-color: white;
-          z-index: 5;
-        }
-      .menu__item {
-          position: relative;
-          display: block;
-          padding: 12px 24px;
-          color: black;
-          font: 700 30px/36px 'Roboto', arial,helvetica,sans-serif;
-          text-decoration: none;
-        }
-      .menu__item:hover {
-         opacity: 0.5;
-         background-color: white;
-         width: 250px;
-         position: relative;
-        }
-    }
+  .logo {
+    position: absolute;
+    left: 7%;
+    padding-top: 0;
+  }
+
+  .logo__title {
+    display: none;
+  }
+
+  .logo__circle_color_dark-blue {
+    top: 12px;
+  }
+
+  .header {
+    justify-content: center;
+    margin-top: 25px;
+    margin-bottom: 63px;
+  }
+
+  .main {
+    text-align: center;
+    padding: 90% 0 0;
+    background-size: 97%;
+    background-position: top center;
+  }
+
+  .main__title {
+    margin-bottom: 36px;
+    font: bold 32px/39px pt_serif, arial, helvetica, sans-serif;
+  }
+
+  .main__subtitle {
+    margin: 0 0 27px 0;
+    padding: 0 10px;
+    font: 500 17px/18px Roboto, arial, helvetica, sans-serif;
+  }
+
+  .main__button {
+    font: 13px/16px Roboto, arial, helvetica, sans-serif;
+  }
+
+  .menu__burger {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    top: 32px;
+    left: 87%;
+    width: 25px;
+  	height: 17px;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  .lower__circles {
+    display: none;
+  }
+
+  .menu__burger > span,
+  .menu__burger > span::before,
+  .menu__burger > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #0056ec;
+  }
+  .menu__burger > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu__burger > span::after {
+    content: '';
+    top: 8px;
+  }
+  #checkbox:checked ~ .menu__burger > span {
+    transform: rotate(45deg);
+  }
+  #checkbox:checked ~ .menu__burger > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  #checkbox:checked ~ .menu__burger > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+
+  #checkbox:checked ~ .menu {
+    display: flex;
+    background-color: #fff;
+  }
+
+  #checkbox:checked ~ .logo {
+    display: none;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1230px) {
+  .wrapper {
+    margin: auto;
+    width: 92%;
+    max-width: 1024px;
+  }
+
+  .header {
+    margin-bottom: 100px;
+  }
+
+  .logo {
+    font: bold 25px/29px pt_serif, arial, helvetica, sans-serif;
+  }
+
+  .menu__item {
+    margin-right: 27px;
+    font: 500 14px/16px Roboto, arial, helvetica, sans-serif;
+  }
+
+  .main {
+    padding: 9px 59% 146px 0;
+    background-size: 50vw 41vw;
+  }
+
+  .main__title {
+    margin-bottom: 38px;
+    font: bold 54px/66px pt_serif, arial, helvetica, sans-serif;
+  }
+
+  .main__subtitle {
+    margin: 0 0 41px 0;
+    font: 500 18px/21px Roboto, arial, helvetica, sans-serif;
+  }
+
+  .main__button {
+    font: 500 13px/16px Roboto, arial, helvetica, sans-serif;
+  }
+}
+
+@media (min-width: 1231px) and (max-width: 1600px) {
+  .wrapper {
+    margin: auto;
+    width: 69%;
+  }
+
+  .header {
+    margin-bottom: 92px;
+  }
+
+  .logo {
+    font: bold 26px/28px pt_serif, arial, helvetica, sans-serif;
+  }
+
+  .menu__item {
+    margin: 5px 24px 0 0;
+    font: 500 15px/17px Roboto, arial, helvetica, sans-serif;
+  }
+
+  .main {
+    padding: 2% 56% 147px 0;
+    background-size: 38vw 32vw;
+  }
+
+  .main__title {
+    margin-bottom: 40px;
+    font: bold 54px/65px pt_serif, arial, helvetica, sans-serif;
+  }
+
+  .main__subtitle {
+    margin-bottom: 41px;
+    font: 500 18px/22px Roboto, arial, helvetica, sans-serif;
+  }
+
+  .main__button {
+    font: 500 13px/15px Roboto, arial, helvetica, sans-serif;
+  }
+}
