--- a/fonts.css
+++ b/fonts.css
@@ -1,7 +1,7 @@
 @font-face {
-    font-family: 'pt_serifbold';
-    src: url('ptserif-bold-webfont.woff') format('woff');
-    font-weight: normal;
+    font-family: 'pt_serif';
+    src: url('fonts/ptserif-bold-webfont.woff') format('woff');
+    font-weight: bold;
     font-style: normal;
 
 }
