--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ body {
 
 .main__title {
   font: bold 71px/83px pt_serif, arial, helvetica, sans-serif;
+  font-size: 68px;
   margin: 0 0 33px 0;
 }
 
@@ -234,8 +235,8 @@ body {
 
   .header {
     justify-content: center;
-    margin-top: 25px;
-    margin-bottom: 63px;
+    margin-top: 22px;
+    margin-bottom: 55px;
   }
 
   .main {
@@ -252,7 +253,7 @@ body {
 
   .main__subtitle {
     margin: 0 0 27px 0;
-    padding: 0 10px;
+    padding: 0 19px;
     font: 500 17px/18px Roboto, arial, helvetica, sans-serif;
   }
 
@@ -386,8 +387,9 @@ body {
   }
 
   .menu__item {
-    margin: 5px 24px 0 0;
+    margin: 4px 25px 0 0;
     font: 500 15px/17px Roboto, arial, helvetica, sans-serif;
+    margin-bottom: -113px;
   }
 
   .main {
