--- a/style.css
+++ b/style.css
@@ -291,12 +291,12 @@ body {
 
 @media (max-width: 1023px) {
   .menu {
-    display: none;
-    padding: 135px 100% 100%;
-    margin-top: 30px;
-    flex-direction: column;
-    position: absolute;
-    z-index: 1;
+  display: none;
+  text-align: center;
+  margin-top: 30px;
+  flex-direction: column;
+  position: absolute;
+  z-index: 1;
   }
 
   .menu__item {
@@ -400,6 +400,12 @@ body {
  #checkbox:checked ~ .menu {
    display: flex;
    background-color: #fff;
+   padding: 0;
+   width: 100%;
+   height: 100vh;
+   justify-content: space-around;
+   margin: 0;
+   z-index: 0;
  }
 
  #checkbox:checked ~ .logo {
