--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ body {
   opacity: 0.5;
   background: #00ad9f;
   color: #000;
+  transition: background 0.5s ease;
 }
 
 @keyframes swing {
@@ -427,34 +428,5 @@ body {
   text-align: center;
   background-color: white;
   z-index: 5;
-}
-
-body {
-  margin: 0;
-  background: #E6E2D6;
-}
-.loader-container {
-  position: absolute;
-  top: calc(50% - 65px);
-  left: calc(50% - 65px);
-  width: 100px;
-  height: 100px;
-  background: #BDE2E0;
-  border-radius: 50%;
-  border: 15px solid #D7695A;
-  box-shadow: inset 0 0 15px rgba(0,0,0,.5);
-  color: white;
-  text-align: center;
-  font-weight: bold;
-  font-size: 30px;
-  line-height: 100px;
-  overflow: hidden;
-}
-@keyframes load {
-  100% {
-    transform: translateY(-1100px);
   }
-}
-.loader {
-  animation: load 11s steps(11, end) infinite;
 }
