--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 .menu {
   display: flex;
   align-items: center;
-  width: 40%
+  width: 40%;
   justify-content: space-between;
 }
 
@@ -429,4 +429,3 @@ body {
   background-color: white;
   z-index: 5;
   }
-}
